# WG_entry_tasks

./: CMakeLists.txt  LICENSE  README.md  main.cpp  wg_entry_tasks_tests.cpp
src/first_task/: is_even.hpp
src/second_task/: cyclic_buffer_array.hpp  cyclic_buffer_list.hpp
src/third_task/: merge_sort.hpp
